# windsurf-forecast

./: .env.example  .gitignore  ADDING_PROVIDERS.md  AGENTS.md  Cargo.toml  README.md
.roo/rules/: specify-rules.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-provider-registry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-provider-registry/checklists/: requirements.md
specs/001-provider-registry/contracts/: README.md  provider_modifications.rs  provider_registry.rs
specs/002-timezone-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-timezone-refactor/checklists/: requirements.md
specs/002-timezone-refactor/contracts/: README.md  provider_trait.rs  (+3 more)
specs/003-unit-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-config-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ai-integration/: data-model.md  plan.md  research.md  spec.md
src/: args.rs  config.rs  forecast_provider.rs  lib.rs  main.rs  provider_registry.rs  test_utils.rs
src/config/: loader.rs  mod.rs  resolver.rs  timezone.rs  types.rs
src/providers/: mod.rs  openweathermap.rs  stormglass.rs  windy.rs
tests/: args_test.rs  config_test.rs  openweathermap_test.rs  provider_registry_test.rs  stormglass_test.rs  timezone_test.rs
tests/common/: mod.rs
(+20 files in other folders)
