[package]
name = "stromglass-windsurf-forecast"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "5.0"
tzf-rs = "0.4"
