[package]
name = "windsurf-forecast"
version = "0.1.0"
edition = "2021"

[lib]
name = "windsurf_forecast"
path = "src/lib.rs"

[features]
# Test utilities feature - automatically enabled during testing
test-utils = []

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
dotenv = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
thiserror = "1.0"
iana-time-zone = "0.1"
tzf-rs = "0.4"
async-trait = "0.1"
inventory = "0.3"

[dev-dependencies]
httpmock = "0.7"
serial_test = "3.0"
tempfile = "3.8"
windsurf-forecast = { path = ".", features = ["test-utils"] }

[profile.release]
opt-level = 3
lto = true
